example/secondfile/objects/Large_Deal__c.object
<CustomObject>
    <description>Custom objected created at request of Sales Operations &amp; Pricing Team. Allows team to input details of prospective deals. Complementary to Opportunity, but does not interact with or feed to Opportunity. This object is intended to have a limited life, and serve as a middle-term solution to consolidate Sales &amp; Pricing manual tracking.</description>
    <fields>
        <fullName>Access_Type__c</fullName>
        <inlineHelpText>Indicates if the mix of Ethernet vs TDM for access circuits in this deal. Select Not Applicable for Mobility-related deals.</inlineHelpText>
        <label>Access Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Only Ethernet</fullName>
                </value>
                <value>
                    <fullName>Only TDM</fullName>
                </value>
                <value>
                    <fullName>Mostly Ethernet</fullName>
                </value>
                <value>
                    <fullName>Mostly TDM</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approved_MRC__c</fullName>
        <inlineHelpText>Monthly Recurring Charges final offer, generated &amp; to be populated by Pricing Team</inlineHelpText>
        <label>Approved MRC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CAM_LargeDeal__c</fullName>
        <description>This is pulled from the Account field &quot;CAM [back-end name: Owner]&quot;.</description>
        <formula>SolutionProviderLargeDeal__r.Owner.FirstName &amp; &quot; &quot; &amp; SolutionProviderLargeDeal__r.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is a read-only field within this page, and cannot be edited within this page. 

This value is pulled automatically from the Account record for this SP. 

This is pulled from the Account field &quot;CAM&quot;.</inlineHelpText>
        <label>CAM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Date_Time_LargeDeal__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Current_Pricing_Team_Engaged__c</fullName>
        <label>Current Pricing Team Engaged</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>APEX</fullName>
                </value>
                <value>
                    <fullName>WHL ICB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deal_Status__c</fullName>
        <inlineHelpText>Indicates current milestone in the life cycle of this deal.</inlineHelpText>
        <label>Deal Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sales Pending</fullName>
                    <default>true</default>
                    <label>Sales Pending</label>
                </value>
                <value>
                    <fullName>Pricing Pending</fullName>
                </value>
                <value>
                    <fullName>SP Pending</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Lost</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deal_TCV__c</fullName>
        <formula>IF(Approved_MRC__c = 0,(VALUE(Text(Term_Length_months__c)) * Rate_Card_MRC__c),(VALUE(Text(Term_Length_months__c)) * Approved_MRC__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Value is calculated automatically:

If Approved MRC Field is populated, then TCV = Approved MRC x Term Length

If Approved MRC Field is blank, then TCV = Rate Card MRC x Term Length</inlineHelpText>
        <label>Deal TCV</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deal_Type__c</fullName>
        <inlineHelpText>Definitions:

New – New Customer
Growth – New Sale
Acquisition – SP acquired the customer line or account
Blended – Combination of New/Growth/Acquisition
Other – All others, could be a renewal or a special construction</inlineHelpText>
        <label>Deal Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Growth</fullName>
                </value>
                <value>
                    <fullName>Blended</fullName>
                </value>
                <value>
                    <fullName>Acquisition</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_User_Customer__c</fullName>
        <inlineHelpText>Indicates the company name that is the SP&apos;s customer.</inlineHelpText>
        <label>End-User Customer</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_Close_Date__c</fullName>
        <inlineHelpText>Indicates date this deal is expected to close.</inlineHelpText>
        <label>Estimated Close Date</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2018 January</fullName>
                </value>
                <value>
                    <fullName>2018 February</fullName>
                </value>
                <value>
                    <fullName>2018 March</fullName>
                </value>
                <value>
                    <fullName>2018 April</fullName>
                </value>
                <value>
                    <fullName>2018 May</fullName>
                </value>
                <value>
                    <fullName>2018 June</fullName>
                </value>
                <value>
                    <fullName>2018 July</fullName>
                </value>
                <value>
                    <fullName>2018 August</fullName>
                </value>
                <value>
                    <fullName>2018 September</fullName>
                </value>
                <value>
                    <fullName>2018 October</fullName>
                </value>
                <value>
                    <fullName>2018 November</fullName>
                </value>
                <value>
                    <fullName>2018 December</fullName>
                </value>
                <value>
                    <fullName>2019 January</fullName>
                </value>
                <value>
                    <fullName>2019 February</fullName>
                </value>
                <value>
                    <fullName>2019 March</fullName>
                </value>
                <value>
                    <fullName>2019 April</fullName>
                </value>
                <value>
                    <fullName>2019 May</fullName>
                </value>
                <value>
                    <fullName>2019 June</fullName>
                </value>
                <value>
                    <fullName>2019 July</fullName>
                </value>
                <value>
                    <fullName>2019 August</fullName>
                </value>
                <value>
                    <fullName>2019 September</fullName>
                </value>
                <value>
                    <fullName>2019 October</fullName>
                </value>
                <value>
                    <fullName>2019 November</fullName>
                </value>
                <value>
                    <fullName>2019 December</fullName>
                </value>
                <value>
                    <fullName>2020 January</fullName>
                </value>
                <value>
                    <fullName>2020 February</fullName>
                </value>
                <value>
                    <fullName>2020 March</fullName>
                </value>
                <value>
                    <fullName>2020 April</fullName>
                </value>
                <value>
                    <fullName>2020 May</fullName>
                </value>
                <value>
                    <fullName>2020 June</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Executive_Top_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check to indicate this deal should be included in Executive reporting.</inlineHelpText>
        <label>Executive Top Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incumbent__c</fullName>
        <label>Incumbent</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AT&amp;T (direct sales)</fullName>
                </value>
                <value>
                    <fullName>BT and Orange</fullName>
                </value>
                <value>
                    <fullName>Century Link</fullName>
                </value>
                <value>
                    <fullName>Charter</fullName>
                </value>
                <value>
                    <fullName>Comcast</fullName>
                </value>
                <value>
                    <fullName>Cox</fullName>
                </value>
                <value>
                    <fullName>Earthlink</fullName>
                </value>
                <value>
                    <fullName>Level 3</fullName>
                </value>
                <value>
                    <fullName>Sprint</fullName>
                </value>
                <value>
                    <fullName>T-Mobile</fullName>
                </value>
                <value>
                    <fullName>Time Warner</fullName>
                </value>
                <value>
                    <fullName>Verizon</fullName>
                </value>
                <value>
                    <fullName>Virtela</fullName>
                </value>
                <value>
                    <fullName>Windstream</fullName>
                </value>
                <value>
                    <fullName>XO</fullName>
                </value>
                <value>
                    <fullName>Zayo</fullName>
                </value>
                <value>
                    <fullName>UNKNOWN</fullName>
                </value>
                <value>
                    <fullName>NOT APPLICABLE</fullName>
                </value>
                <value>
                    <fullName>OTHER</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Modified_Date_Time_LaregDeal__c</fullName>
        <formula>LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Modified Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Mobility_TSC_LargeDeal__c</fullName>
        <formula>SolutionProviderLargeDeal__r.Mobility_TSC__r.FirstName &amp; &quot; &quot; &amp; SolutionProviderLargeDeal__r.Mobility_TSC__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is a read-only field within this page, and cannot be edited within this page. 

This value is pulled automatically from the Account record for this SP. 

This is pulled from the Account field &quot;Mobility TSC&quot;.</inlineHelpText>
        <label>Mobility TSC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Sites_Lines__c</fullName>
        <inlineHelpText>Input the count of sites or lines for this deal.</inlineHelpText>
        <label>Number of Sites/Lines</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Picklist__c</fullName>
        <inlineHelpText>Indicates the sales channel to which this deal belongs.</inlineHelpText>
        <label>Channel</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>APEX</fullName>
                </value>
                <value>
                    <fullName>MMA</fullName>
                </value>
                <value>
                    <fullName>WHL</fullName>
                    <isActive>false</isActive>
                    <label>WHL</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pricing_Team_Notes__c</fullName>
        <label>Pricing Team Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Probability_to_Win__c</fullName>
        <inlineHelpText>Indicates estimated likelihood that AT&amp;T will win this deal.</inlineHelpText>
        <label>Probability to Win</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>10%</fullName>
                </value>
                <value>
                    <fullName>20%</fullName>
                </value>
                <value>
                    <fullName>30%</fullName>
                </value>
                <value>
                    <fullName>40%</fullName>
                </value>
                <value>
                    <fullName>50%</fullName>
                </value>
                <value>
                    <fullName>60%</fullName>
                </value>
                <value>
                    <fullName>70%</fullName>
                </value>
                <value>
                    <fullName>80%</fullName>
                </value>
                <value>
                    <fullName>90%</fullName>
                </value>
                <value>
                    <fullName>100%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <formula>CASE(Product__c , 
&apos;ADE&apos; , &apos;Wireline&apos;, 
&apos;AIA&apos; , &apos;Wireline&apos;, 
&apos;ADI (MIS)&apos;, &apos;Wireline&apos;, 
&apos;ANIRA&apos;, &apos;Wireline&apos;, 
&apos;ASE&apos;, &apos;Wireline&apos;, 
&apos;AVPN&apos;, &apos;Wireline&apos;, 
&apos;COLO&apos;, &apos;Wireline&apos;, 
&apos;EPLS WAN&apos;, &apos;Wireline&apos;, 
&apos;Flexware&apos;, &apos;Wireline&apos;, 
&apos;IP Flex&apos;, &apos;Wireline&apos;, 
&apos;NBFW&apos;, &apos;Wireline&apos;, 
&apos;Mobility&apos;, &apos;Mobility&apos;, 
&apos;IoT&apos;, &apos;Mobility&apos;, 
&apos;Mixed(more than 1 product)&apos;, &apos;Mixed&apos;, 
NULL)</formula>
        <inlineHelpText>Auto-populated based on value in the Product field on this record.</inlineHelpText>
        <label>Product Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ADE</fullName>
                </value>
                <value>
                    <fullName>ADI (MIS)</fullName>
                </value>
                <value>
                    <fullName>AIA</fullName>
                </value>
                <value>
                    <fullName>ANIRA</fullName>
                </value>
                <value>
                    <fullName>ASE</fullName>
                </value>
                <value>
                    <fullName>AVPN</fullName>
                </value>
                <value>
                    <fullName>COLO</fullName>
                </value>
                <value>
                    <fullName>EPLS WAN</fullName>
                </value>
                <value>
                    <fullName>Flexware</fullName>
                </value>
                <value>
                    <fullName>IoT</fullName>
                </value>
                <value>
                    <fullName>IP Flex</fullName>
                </value>
                <value>
                    <fullName>Mixed(more than 1 product)</fullName>
                </value>
                <value>
                    <fullName>Mobility</fullName>
                </value>
                <value>
                    <fullName>NBFW</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prompt_AMDB__c</fullName>
        <inlineHelpText>Input the deal ID exactly as it appears in Prompt/AMDB (examples: Q-00323376, MAN7335, MAN1164-RepriceExt)</inlineHelpText>
        <label>Deal ID (Prompt/AMDB)</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ROME_Opportunity_ID__c</fullName>
        <inlineHelpText>Required only for WHL ICB deals. 

Input the ROME Opportunity ID exactly as it appears in ROME. Example: &quot;1-77K6QTG&quot;</inlineHelpText>
        <label>ROME Opportunity ID</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_Card_MRC__c</fullName>
        <inlineHelpText>Monthly Recurring Charge for this deal based on the standard pricing listed, assuming no discounts or adjustments, etc.</inlineHelpText>
        <label>Deal MRC (Rate Card)</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sales_Director__c</fullName>
        <formula>SolutionProviderLargeDeal__r.Sales_Director__r.FirstName &amp; &quot; &quot; &amp; SolutionProviderLargeDeal__r.Sales_Director__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is a read-only field within this page, and cannot be edited within this page. 

This value is pulled automatically from the Account record for this SP. 

This is pulled from the Account field &quot;Sales Director&quot;.</inlineHelpText>
        <label>Sales Director</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Manager_LargeDeal__c</fullName>
        <formula>SolutionProviderLargeDeal__r.Sales_Manager__r.FirstName &amp; &quot; &quot; &amp; SolutionProviderLargeDeal__r.Sales_Manager__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is a read-only field within this page, and cannot be edited within this page. 

This value is pulled automatically from the Account record for this SP. 

This is pulled from the Account field &quot;Sales Manager&quot;.</inlineHelpText>
        <label>Sales Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Team_Notes_LargeDeal__c</fullName>
        <label>Sales Team Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SolutionProviderLargeDeal__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Solution Provider</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Large Deals</relationshipLabel>
        <relationshipName>Large_Deals</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Target_MRC_SP__c</fullName>
        <inlineHelpText>The Monthly Recurring Charge requested by the Solution Provider for this deal.</inlineHelpText>
        <label>Target MRC (SP)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Term_Length_months__c</fullName>
        <inlineHelpText>Duration of proposed contract in months</inlineHelpText>
        <label>Term Length (months)</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>36</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Top_Competitor__c</fullName>
        <inlineHelpText>Select the name of the company recognized to be the competition for winning this deal.</inlineHelpText>
        <label>Top Competitor</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AT&amp;T (direct sales)</fullName>
                </value>
                <value>
                    <fullName>BT and Orange</fullName>
                </value>
                <value>
                    <fullName>Century Link</fullName>
                </value>
                <value>
                    <fullName>Charter</fullName>
                </value>
                <value>
                    <fullName>Comcast</fullName>
                </value>
                <value>
                    <fullName>Cox</fullName>
                </value>
                <value>
                    <fullName>Earthlink</fullName>
                </value>
                <value>
                    <fullName>Level 3</fullName>
                </value>
                <value>
                    <fullName>Sprint</fullName>
                </value>
                <value>
                    <fullName>T-Mobile</fullName>
                </value>
                <value>
                    <fullName>Time Warner</fullName>
                </value>
                <value>
                    <fullName>Verizon</fullName>
                </value>
                <value>
                    <fullName>Virtela</fullName>
                </value>
                <value>
                    <fullName>Windstream</fullName>
                </value>
                <value>
                    <fullName>XO</fullName>
                </value>
                <value>
                    <fullName>Zayo</fullName>
                </value>
                <value>
                    <fullName>UNKNOWN</fullName>
                </value>
                <value>
                    <fullName>OTHER</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Wireline_TSC_LargeDeal__c</fullName>
        <formula>SolutionProviderLargeDeal__r.TSC__r.FirstName &amp; &quot; &quot; &amp; SolutionProviderLargeDeal__r.TSC__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is a read-only field within this page, and cannot be edited within this page. 

This value is pulled automatically from the Account record for this SP. 

This is pulled from the Account field &quot;Wireline TSC&quot;.</inlineHelpText>
        <label>Wireline TSC</label>
        <type>Text</type>
    </fields>
    <label>Large Deal</label>
    <listViews>
        <fullName>All_Large_Deals</fullName>
        <columns>NAME</columns>
        <columns>Prompt_AMDB__c</columns>
        <columns>SolutionProviderLargeDeal__c</columns>
        <columns>End_User_Customer__c</columns>
        <columns>Deal_TCV__c</columns>
        <columns>Product__c</columns>
        <columns>Access_Type__c</columns>
        <columns>Number_of_Sites_Lines__c</columns>
        <columns>Term_Length_months__c</columns>
        <columns>Estimated_Close_Date__c</columns>
        <columns>Probability_to_Win__c</columns>
        <columns>Sales_Director__c</columns>
        <columns>Picklist__c</columns>
        <columns>Created_Date_Time_LargeDeal__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Large Deals</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Large_Deals_Access_Ethernet_Only</fullName>
        <columns>NAME</columns>
        <columns>Prompt_AMDB__c</columns>
        <columns>SolutionProviderLargeDeal__c</columns>
        <columns>End_User_Customer__c</columns>
        <columns>Deal_TCV__c</columns>
        <columns>Product__c</columns>
        <columns>Access_Type__c</columns>
        <columns>Number_of_Sites_Lines__c</columns>
        <columns>Term_Length_months__c</columns>
        <columns>Estimated_Close_Date__c</columns>
        <columns>Probability_to_Win__c</columns>
        <columns>Sales_Director__c</columns>
        <columns>Picklist__c</columns>
        <columns>Created_Date_Time_LargeDeal__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Access_Type__c</field>
            <operation>equals</operation>
            <value>Only Ethernet</value>
        </filters>
        <label>Large Deals - Access: Ethernet Only</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Large_Deals_Access_TDM_Only</fullName>
        <columns>NAME</columns>
        <columns>Prompt_AMDB__c</columns>
        <columns>SolutionProviderLargeDeal__c</columns>
        <columns>End_User_Customer__c</columns>
        <columns>Deal_TCV__c</columns>
        <columns>Product__c</columns>
        <columns>Access_Type__c</columns>
        <columns>Number_of_Sites_Lines__c</columns>
        <columns>Term_Length_months__c</columns>
        <columns>Estimated_Close_Date__c</columns>
        <columns>Probability_to_Win__c</columns>
        <columns>Sales_Director__c</columns>
        <columns>Picklist__c</columns>
        <columns>Created_Date_Time_LargeDeal__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Access_Type__c</field>
            <operation>equals</operation>
            <value>Only TDM</value>
        </filters>
        <label>Large Deals - Access: TDM Only</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Large_Deals_By_Status_SP_Pending</fullName>
        <columns>NAME</columns>
        <columns>Prompt_AMDB__c</columns>
        <columns>SolutionProviderLargeDeal__c</columns>
        <columns>End_User_Customer__c</columns>
        <columns>Product__c</columns>
        <columns>Access_Type__c</columns>
        <columns>Number_of_Sites_Lines__c</columns>
        <columns>Term_Length_months__c</columns>
        <columns>Estimated_Close_Date__c</columns>
        <columns>Probability_to_Win__c</columns>
        <columns>Picklist__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Deal_Status__c</field>
            <operation>equals</operation>
            <value>SP Pending</value>
        </filters>
        <label>_Large Deals - Status: SP Pending</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Large_Deals_Director_Chapes</fullName>
        <columns>NAME</columns>
        <columns>Prompt_AMDB__c</columns>
        <columns>SolutionProviderLargeDeal__c</columns>
        <columns>End_User_Customer__c</columns>
        <columns>Deal_TCV__c</columns>
        <columns>Product__c</columns>
        <columns>Access_Type__c</columns>
        <columns>Number_of_Sites_Lines__c</columns>
        <columns>Term_Length_months__c</columns>
        <columns>Sales_Director__c</columns>
        <columns>Estimated_Close_Date__c</columns>
        <columns>Probability_to_Win__c</columns>
        <columns>Picklist__c</columns>
        <columns>Created_Date_Time_LargeDeal__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sales_Director__c</field>
            <operation>contains</operation>
            <value>Chapes</value>
        </filters>
        <label>Large Deals - Director: Chapes</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Large_Deals_Director_Hannel</fullName>
        <columns>NAME</columns>
        <columns>Prompt_AMDB__c</columns>
        <columns>SolutionProviderLargeDeal__c</columns>
        <columns>End_User_Customer__c</columns>
        <columns>Deal_TCV__c</columns>
        <columns>Product__c</columns>
        <columns>Access_Type__c</columns>
        <columns>Number_of_Sites_Lines__c</columns>
        <columns>Term_Length_months__c</columns>
        <columns>Sales_Director__c</columns>
        <columns>Estimated_Close_Date__c</columns>
        <columns>Probability_to_Win__c</columns>
        <columns>Picklist__c</columns>
        <columns>Created_Date_Time_LargeDeal__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sales_Director__c</field>
            <operation>contains</operation>
            <value>Hannel</value>
        </filters>
        <label>Large Deals - Director: Hannel</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Large_Deals_Director_McCrary</fullName>
        <columns>NAME</columns>
        <columns>Prompt_AMDB__c</columns>
        <columns>SolutionProviderLargeDeal__c</columns>
        <columns>End_User_Customer__c</columns>
        <columns>Deal_TCV__c</columns>
        <columns>Product__c</columns>
        <columns>Access_Type__c</columns>
        <columns>Number_of_Sites_Lines__c</columns>
        <columns>Term_Length_months__c</columns>
        <columns>Sales_Director__c</columns>
        <columns>Estimated_Close_Date__c</columns>
        <columns>Probability_to_Win__c</columns>
        <columns>Picklist__c</columns>
        <columns>Created_Date_Time_LargeDeal__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sales_Director__c</field>
            <operation>contains</operation>
            <value>McCrary</value>
        </filters>
        <label>Large Deals - Director: McCrary</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Large_Deals_Mobility</fullName>
        <columns>NAME</columns>
        <columns>Prompt_AMDB__c</columns>
        <columns>SolutionProviderLargeDeal__c</columns>
        <columns>End_User_Customer__c</columns>
        <columns>Deal_TCV__c</columns>
        <columns>Product__c</columns>
        <columns>Access_Type__c</columns>
        <columns>Number_of_Sites_Lines__c</columns>
        <columns>Term_Length_months__c</columns>
        <columns>Estimated_Close_Date__c</columns>
        <columns>Probability_to_Win__c</columns>
        <columns>Sales_Director__c</columns>
        <columns>Picklist__c</columns>
        <columns>Created_Date_Time_LargeDeal__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_Family__c</field>
            <operation>equals</operation>
            <value>Mobility</value>
        </filters>
        <label>Large Deals - Mobility</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Large_Deals_Pricing_Pending</fullName>
        <columns>NAME</columns>
        <columns>Prompt_AMDB__c</columns>
        <columns>SolutionProviderLargeDeal__c</columns>
        <columns>End_User_Customer__c</columns>
        <columns>Product__c</columns>
        <columns>Access_Type__c</columns>
        <columns>Number_of_Sites_Lines__c</columns>
        <columns>Term_Length_months__c</columns>
        <columns>Estimated_Close_Date__c</columns>
        <columns>Probability_to_Win__c</columns>
        <columns>Picklist__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Deal_Status__c</field>
            <operation>equals</operation>
            <value>Pricing Pending</value>
        </filters>
        <label>_Large Deals - Status: Pricing Pending</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Large_Deals_Sales_Pending</fullName>
        <columns>NAME</columns>
        <columns>Prompt_AMDB__c</columns>
        <columns>SolutionProviderLargeDeal__c</columns>
        <columns>End_User_Customer__c</columns>
        <columns>Product__c</columns>
        <columns>Access_Type__c</columns>
        <columns>Number_of_Sites_Lines__c</columns>
        <columns>Term_Length_months__c</columns>
        <columns>Estimated_Close_Date__c</columns>
        <columns>Probability_to_Win__c</columns>
        <columns>Picklist__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Deal_Status__c</field>
            <operation>equals</operation>
            <value>Sales Pending</value>
        </filters>
        <label>_Large Deals - Status: Sales Pending</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
</CustomObject>